force-app/main/default/objects/Intacct_Error__c/Intacct_Error__c.object-meta.xml
<CustomObject>
    <label>Intacct Error</label>
    <nameField>
        <displayFormat>IE-{0}</displayFormat>
        <label>Intacct Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intacct Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>