force-app/main/default/objects/Intacct_Error__c/fields/Date_Picker__c.field-meta.xml
<CustomField>
    <fullName>Date_Picker__c</fullName>
    <description>Used in the intacct error handling page to get the date Picker functionality.</description>
    <label>Date Picker</label>
    <type>DateTime</type>
</CustomField>