force-app/main/default/objects/Intacct_Error__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <label>Errors</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>