force-app/main/default/objects/Intacct_Error__c/fields/SFDC_Id_Prefix_Text__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Id_Prefix_Text__c</fullName>
    <description>Populated by an workflow rule. Contains the prefix of the parent id (first 3 characters).</description>
    <label>SFDC Id Prefix Text</label>
    <length>3</length>
    <type>Text</type>
</CustomField>